fix(core): close session and reward correctness gaps